# Oxidized

./: .gitignore  Cargo.toml  README.md  docs.md
src/: error.rs  http_request.rs  lib.rs  response.rs  router.rs  server.rs  service.rs
src/extractor/: from_request.rs  json.rs  mod.rs  string.rs
src/middleware/: logger.rs  mod.rs
src/ws/: mod.rs  upgrade.rs  wasm.rs
